--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,15 @@
 					<failOnMissingWebXml>true</failOnMissingWebXml>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.2.1</version>
+				<configuration>
+					<warSourceDirectory>src/main/webapp</warSourceDirectory>
+					<failOnMissingWebXml>true</failOnMissingWebXml>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -75,5 +84,6 @@
 		<module>ch05</module>
 		<module>ch06</module>
 		<module>ch07</module>
+		<module>ch08</module>
 	</modules>
 </project>
