--- a/ch03/pom.xml
+++ b/ch03/pom.xml
@@ -9,7 +9,21 @@
 	</parent>
 	<artifactId>ch03</artifactId>
 	<packaging>war</packaging>
+
 	<build>
 		<finalName>ch03</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<version>1.1</version>
+				<configuration>
+					<url>http://127.0.0.1:8088/manager/text</url>
+					<path>/ch03</path>
+					<username>admin</username>
+					<password>manager</password>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
